# agb

./: CLAUDE.md  Cargo.toml  GEMINI.md  README.md
.claude/: toolkit.yaml
.gemini/: settings.json  toolkit.yaml
.gemini/commands/: check-docs.toml  commit.toml  impl-code.toml  init-ctx.toml  sync-docs.toml  write-task.toml
docs/examples/: TASKS.md  TASK_EXAMPLE.md
docs/plans/: 2026-02-24-agb-roadmap-design.md
docs/specs/: PRD.md  SPEC.md  SYSTEM_SPEC.md  TASKS.md  TECH_SPEC.md
docs/tasks/: TASK-1-1.md  TASK-1-2.md  TASK-1-3.md  TASKS.md
plans/feature-1/: PLAN.md
plans/feature-10/: DESIGN.md  PLAN.md
plans/feature-11/: DESIGN.md  PLAN.md
plans/feature-12/: DESIGN.md  PLAN.md
plans/feature-13/: PLAN.md
plans/feature-15/: PLAN.md
plans/feature-16/: PLAN.md
plans/feature-3/: PLAN.md
plans/feature-4/: PLAN.md
plans/feature-5/: PLAN.md
plans/feature-8/: DESIGN.md  PLAN.md
plans/feature-9/: DESIGN.md  PLAN.md
plans/fix-1/: DESIGN.md  PLAN.md
plans/fix-2/: DESIGN.md  PLAN.md
plans/refactor-10/: DESIGN.md  PLAN.md
plans/refactor-11/: DESIGN.md  PLAN.md
plans/refactor-12/: PLAN.md  (+1 more)
scripts/: install.sh  uninstall.sh
specs/: DESIGN.md  PRD.md  SPEC.md  TECHSPEC.md  design.md  designs.md  format.md  model.md  prds.md  spec.md  specs.md
src/: config.rs  lib.rs  main.rs
tests/: app_integration_test.rs  cli_test.rs  e2e_build_test.rs  e2e_codex_openai_policy_test.rs  e2e_dependency_test.rs  e2e_path_split_test.rs  e2e_skill_extras_test.rs  e2e_sync_multiline_test.rs  e2e_sync_test.rs  metadata_map_test.rs  repro_missing_resource_test.rs
(+348 files in other folders)
