[package]
name = "agb"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.5"
glob = "0.3"
shellexpand = "3.1.2"
sha2 = "0.10"
regex = "1.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
